# personal-fastapi-template

./: README.md  make.py  pyproject.toml  setup.py
__project_name__/configs/: coverage.conf
__project_name__/deploy/: Dockerfile
__project_name__/internal/: cli.py  run.py
__project_name__/internal/api/: exceptions.py  main.py
__project_name__/internal/api/handlers/v1/: __init__.py
__project_name__/internal/db/: base.py  utils.py
__project_name__/internal/db/controllers/: abc_base.py
__project_name__/internal/db/controllers/mongo/: _base.py
__project_name__/internal/db/controllers/postgres/: _base.py
__project_name__/internal/settings/: api.py  base.py  db.py  logging.py
__project_name__/internal/tests/integ/: .env.ci  conftest.py  db.local.docker-compose.yml
__project_name__/internal/utils/: exceptions.py
__project_name__/scripts/: lint.sh  test.sh
