[tool.poetry]
name = "__project_name__"
version = "0.1.0"
description = ""
authors = ["Timofey Neyenburg <neyenburgz@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^2.1.1"
pydantic-settings = "^2.0.3"
fastapi = "^0.101.1"
bump-pydantic = "^0.6.1"
colorama = "^0.4.6"
uvicorn = "^0.23.2"
orjson = "^3.9.4"
python-multipart = "^0.0.6"


[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
flake8 = "^6.1.0"
pytest = "^7.4.0"
coverage = "^7.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
